--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
   <meta name="theme-color" content="#1976d2">
 </head>
-<body class="mat-typography"><!-- es2l radhouene 3al classe hethi chnowa??-->
+<body><!-- es2l radhouene 3al classe hethi chnowa??-->
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
